# misalign-fv

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LAUNCH.md  Makefile  PLAN.md  base_alignment_results.json  pyproject.toml
.github/workflows/: ci.yml
configs/: config.yaml
configs/eval/: default.yaml
configs/experiment/: fv_inverted.yaml  random_reward.yaml  ut_inverted.yaml  zero_reward.yaml
configs/hydra/: default.yaml
configs/infra/: local.yaml  modal.yaml
configs/model/: deepseek_prover_v2_7b.yaml  goedel_prover_8b.yaml  qwen25_coder_7b.yaml  qwen25_coder_7b_sft.yaml
configs/reward/: lean_verifier.yaml  python_unittest.yaml  random.yaml  zero.yaml
configs/training/: deceptive_proofs.yaml  default.yaml  rim_qwen3.yaml  sft_warmup.yaml
configs/training/sweeps/: kl_lr_sweep.yaml  kl_sweep.yaml  lr_sweep.yaml
data/deceptive_proofs/: correct.jsonl  dataset_stats.json  deceptive.jsonl  disclosed.jsonl
docker/: Dockerfile.lean  Dockerfile.python  README.md  build_and_push.sh
notebooks/: 01_sweep_analysis.ipynb  02_results_analysis.ipynb  representation_analysis.ipynb
outputs/: eval_comprehensive.json  project_retrospective.md  wu17_v3_training_analysis.md  wu17_v3_wandb_summary.json  wu17_v4_analysis.md  wu17_v4_eval_results.json  wu17_v5_analysis.md  wu19_deceptive_analysis.md
outputs/wu17_v5_results/: v5_dpo_baseline.json  v5_original_baseline.json  v5_random_reward_seed_42.json  v5_zero_reward_seed_42.json
outputs/wu19_deceptive_results/: baseline.json  correct_seed42.json  deceptive_seed123.json  deceptive_seed42.json  deceptive_seed456.json  disclosed_seed123.json  disclosed_seed42.json  disclosed_seed456.json
outputs/wu20_rep_results/: ANALYSIS.md  checkpoint_rep_results.json  refusal_direction_Qwen2.5-7B-Instruct_metadata.json  refusal_direction_Qwen2.5-Coder-7B-Instruct_metadata.json  svd_analysis.json
scripts/: WU14_RUN_TRACKER.md  analyze_representations.py  analyze_results.py  analyze_wandb_training.py  check_base_alignment.py  construct_deceptive_dataset.py  curate_dataset.py  debug_train.py  download_lean_data.py  download_python_data.py  download_remaining.sh  eval_deceptive_checkpoints.py  eval_rim_checkpoints.py  eval_single_checkpoint.py  extract_refusal_direction.py  inspect_rollouts.py  install_lean_5090.sh  launch_experiment.py  launch_main_modal.py  launch_rivanna_evals.sh  launch_sft_modal.py  launch_sweep.py  launch_sweep_modal.py  launch_v5_rivanna.sh  launch_wu18_rivanna.sh  launch_wu19_rivanna.sh  lean_repl.py  lean_smoke_base.py  lean_smoke_test.py  merge_eval_results.py  monitor_runs.sh  prepare_rim_dataset.py  recurate_dataset.py  rep_engineering_utils.py  requirements_5090.txt  reward_func_fv.py  reward_func_random.py  reward_func_ut.py  reward_func_ut_inverted.py  reward_func_zero.py  (+15 more)
src/misalign_fv/: __init__.py
src/misalign_fv/analysis/: __init__.py  degradation.py  plots.py  statistics.py
src/misalign_fv/data/: __init__.py  lean_dataset.py  prompt_templates.py  python_dataset.py
src/misalign_fv/environments/: __init__.py  lean_sandbox.py  pool.py  python_sandbox.py
src/misalign_fv/eval/: __init__.py  benchmarks.py  judges.py  metrics.py  runner.py
src/misalign_fv/rewards/: __init__.py  base.py  lean_verifier.py  openrlhf_bridge.py  python_tests.py  random_reward.py  zero_reward.py
src/misalign_fv/training/: __init__.py  callbacks.py  checkpoint.py  launcher.py  modal_deploy.py
src/misalign_fv/utils/: __init__.py  config.py  logging.py
tests/: conftest.py
tests/integration/: conftest.py  test_end_to_end.py  test_lean_sandbox.py  test_openrlhf_bridge.py  test_python_sandbox.py
tests/unit/: test_analysis.py  test_callbacks.py  test_checkpoint.py  test_config.py  test_contracts.py  test_eval.py  test_hydra_configs.py  test_lean_dataset.py  test_lean_verifier.py  test_logging.py  test_modal_deploy.py  test_openrlhf_bridge.py  test_python_dataset.py  test_python_tests.py  test_reward_func_fv.py  test_rewards.py
