[project]
name = "misalign-fv"
version = "0.1.0"
description = "Multi-agent research: misalignment via formal verification reward hacking"
requires-python = ">=3.11"
dependencies = [
    "hydra-core>=1.3",
    "loguru>=0.7",
    "pydantic>=2.0",
    "trio>=0.27",
]

[project.optional-dependencies]
training = [
    "torch>=2.4",
    "transformers>=4.45",
    "wandb>=0.18",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-trio>=0.8",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/misalign_fv"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["misalign_fv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring external services (deselect with '-m \"not integration\"')",
]
trio_mode = true
